@@ -1,4 +1,10 @@
+2005-10-08  Christian Persch  <chpe@cvs.gnome.org>
 
+	* lib/ephy-debug.c:
+
+	Fix profiling in builddir != srcdir builds.
+
+2005-10-08  Christian Persch  <chpe@cvs.gnome.org>
 
 	* lib/widgets/ephy-spinner.c: (ephy_spinner_start),
 	(ephy_spinner_dispose), (ephy_spinner_finalize),
